--- a/web_design/Bloom_Room/index.html
+++ b/web_design/Bloom_Room/index.html
@@ -9,32 +9,39 @@
     </head>
     <body class="body">
         <header class="header">
-            <a class="logo-header" href="/">
-                <img src="images/logo-header.png">
-            </a>
-            <div class="menu-header">
+            <div href="/">
+                <img class="logo-header" src="images/logo-header.png" alt="Логотип">
+            </div>
+            <nav class="menu-header">
+                <ul class="menu-list">
+                        <li><a class="catalog" href="catalog.html">Каталог</a></li>
+                        <li><a class="about" href="about.html">Про нас</a></li>
+                        <li><a class="delivery" href="delivery.html">Доставка</a></li>
+                        <li><a class="contacts" href="contacts.html">Контакти</a></li>
+                </ul>
+            </nav>
+            <div class="buttons-header">
                 <div>
-                    <p class="catalog"><a href="/catalog/">Каталог</a></p>
-                    <p class="about"><a href="/about/">Про нас</a></p>
-                    <p class="delivery"><a href="/delivery/">Доставка</a></p>
-                    <p class="contacts"><a href="/contacts/">Контакти</a></p>
-                </div>
-                <div class="buttons-header">
-                    <button class="cart-button">
-                        <p>Кошик</p>
-                    </button>
-                    <button class="search-button">
-                        <p>Пошук</p>
+                    <button class="search-button" type="submit">
+                        <img class="search-image" src="images/search-icon.png">
                     </button>
                 </div>
-            </div>           
+                <div>
+                    <a class="cart-button" href="cart.html">
+                        <img class="cart_icon" src="images/cart-icon.png">
+                    </a>
+                </div>
+            </div>          
         </header>
-        <main class="main">
+        <main>
+            <div class="main-block">
+                <h1 class="main-heading">Подаруй щастя коханій людині!</h1>
+                <img id="main-photo" src="images/flowers.jpg" alt="Flowers">
+             </div>
+
              <div class="about-us">
                 <img class="about-us_img" src="images/work_process.jpg" alt="Our work process.">
-                <div class="about-us_heading">
-                    <p class="about-us_heading-text">Про нас</p>
-                </div>
+                <h1 id="about-us_heading">Про нас</h1>
                 <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                     In convallis venenatis lacinia. 
                     Morbi nisl orci, porta quis malesuada ut, euismod ut sapien. 
@@ -44,26 +51,20 @@
                     Mauris tempor.
                 </p>
                 <div class="social-media">
-                    <button class="instagram" href="https://www.instagram.com/">
+                    <a class="instagram" href="https://www.instagram.com/">
                         <img class="instagram" src="images/instagram.png" alt="Instagram icon">
-                    </button>
-                    <button class="facebook" href="https://www.facebook.com/">
+                    </a>
+                    <a class="facebook" href="https://www.facebook.com/">
                         <img class="facebook" src="images/facebook.png" alt="Facebook icon">
-                    </button>
-                    <button class="tiktok" href="https://www.facebook.com/">
+                    </a>
+                    <a class="tiktok" href="https://www.facebook.com/">
                         <img class="tiktok" src="images/tiktok.png" alt="Tiktok icon">
-                    </button>
+                    </a>
                 </div>
              </div>
 
-             <div class="main-block">
-                <p class="main-heading">Подаруй щастя коханій людині!</p>
-                <img id="main-photo" src="images/flowers.jpg" alt="Flowers">
-             </div>
-
-             
              <div class="novelty">
-                <p class="novelty-heading">Новинки</p>
+                <h1 id="novelty-heading">Новинки</h1>
                     <div id="bouqette-series1">
                         <div class="bouqette-frame" id="bouqette1-frame">
                             <img class="bouqette" src="images/hort_rose_eust.jpg"> 
@@ -104,24 +105,81 @@
                             <button class="to-buy_button"></button>
                         </div>
                     </div>
-                    <button id="to-catalog_button"></button>
+                    <a id="to-catalog_button" href="catalog.html">
+                        Більше букетів
+                    </a>
              </div>
              <div class="reviews">
-                <p class="review_heading">Відгуки</p>
+                <h1 id="review_heading">Відгуки</h1>
                 <div class="review" id="review1">
-                    <div class="client-photo"></div>
-                    <p class="text-review"></p>
+                    <img src="images/no-user-image.jpg" class="client-photo">
+                    <p class="text-review">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                        In convallis venenatis lacinia. Morbi nisl orci, 
+                        porta quis malesuada ut, euismod ut sapien.</p>
                 </div>
                 <div class="review" id="review2">
-                    <div class="client-photo"></div>
-                    <p class="text-review"></p>
+                    <img src="images/no-user-image.jpg" class="client-photo">
+                    <p class="text-review">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                        In convallis venenatis lacinia. Morbi nisl orci, porta quis malesuada ut, 
+                        euismod ut sapien.</p>
                 </div>
                 <div class="review" id="review3">
-                    <div class="client-photo"></div>
-                    <p class="text-review"></p>
+                    <img src="images/no-user-image.jpg" class="client-photo">
+                    <p class="text-review">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                        In convallis venenatis lacinia. Morbi nisl orci, 
+                        porta quis malesuada ut, euismod ut sapien.</p>
                 </div>
+                <div id="review-arrows">
+                    <button id="ellipce-button-left"></button>
+                    <button id="ellipce-button-right"></button>
+                </div>
+                <h1 id="add-review_heading">Додати відгук</h1>
+                <form>
+                    <input type="text" id="name" name="name" required>
+                    <textarea id="review-value" name="review" rows="4" required></textarea>
+                    <input id="review-submit" type="submit" value="Відправити відгук">
+                </form>
              </div>
         </main>
+        <footer>
+            <div href="/">
+                <img class="logo-footer" src="images/logo-footer.png" alt="Логотип">
+            </div>           
+            <div class="contacts-footer">
+                <h2>Контакти</h2>
+                <p class="text-footer">
+                    +380 66 123 4567
+                    <br>
+                    +380 93 123 4567
+                    <br>
+                    Працюємо щодня з 7:00 до 22:00
+                </p>
+            </div>
+            <div class="info-footer">
+                <h2>Інформація</h2>
+                <p class="text-footer">
+                    <a href="about.html">Про нас</a>
+                    <br>
+                    <a href="delivery.html">Доставка</a>
+                    <br>
+                    <a href="payment.html">Оплата</a>
+                    <br>
+                    <a href="guarantees.html">Гарантії</a>
+                    <br>
+                    <a href="care.html">Догляд за квітами</a>
+                </p>
+            </div>
+            <div class="often-search_footer">
+                <h2>Часто шукають</h2>
+                <p class="text-footer">
+                    <a href="catalog.html">Букети</a>
+                    <br>
+                    <a href="catalog-flowers.html">Квіти поштучно</a>
+                    <br>
+                    <a href="reviews.html">Відгуки</a>
+                </p>
+            </div>
+        </footer>
     </body>
 </html>
    
